<resources>
    <string name="app_name">SelfMate</string>
    <string name="tvHowFeelingTitle">How are you feeling?</string>
    <string name="moodButton">Mood Test </string>
    <string name="teaserTitle">Teaser</string>
    <string name="exploreTitle">Explore Topics</string>
    <string name="quiz1">The name your best friend? </string>
    <string name="quiz2">Which Mobile OS do you prefer?</string>
    <string name="teaserQuizOneTv">Do you have a best friend?</string>
    <string name="teaserQuizOneTv1">Yes</string>
    <string name="teaserQuizOneTv2">No</string>
    <string name="teaserQuizOneTv3">Need One</string>

    <string name="tagLine">Welcome to the world of jokery.
    The truth will always set you free. -Vicki Mes
    </string>



</resources>
